test/type_inference/negative/type_args1.output
type_args1.impala:5 col 35 - 38: error: mismatched types: expected 'i32' but found 'bool' as argument type.
